--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/estilo.css">
+    <link rel="stylesheet" href="CSS/estilo.css">
     <title>Kendrick Lamar</title>
 </head>
 
@@ -31,7 +31,7 @@
             <a target="_blank" href="https://open.spotify.com/intl-es/album/0hvT3yIEysuuvkK73vgdcW?si=6AtgW0baQVKJ628stkTQhA" class="boton">REPRODUDIR AHORA - GNX</a> 
         </div>
 
-        <img src="/imagenes/kendrick.png" alt="Kendrick Lamar" class="kendrick">
+        <img src="imagenes/kendrick.png" alt="Kendrick Lamar" class="kendrick">
 
     </section>
 
