--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a target="_blank" href="https://open.spotify.com/intl-es/album/0hvT3yIEysuuvkK73vgdcW?si=6AtgW0baQVKJ628stkTQhA" class="boton">REPRODUDIR AHORA - GNX</a> 
         </div>
 
-        <img src="imagenes/kendrick.png" alt="Kendrick Lamar" class="kendrick">
+        <img src="/imagenes/kendrick.png" alt="Kendrick Lamar" class="kendrick">
 
     </section>
 
