--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="CSS/efectos.css">
+    <link rel="icon" href="imagenes/vinilo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>Kendrick Lamar</title>
 </head>
 
 <body>
 
-    <div id="panel" class="panel color">
-        <a href="#">Último lanzamiento</a>
-        <a href="#biografia">Biografía</a>
-        <a href="#recorridoMusical">Recorrido musical</a>
-    </div>
+    <input type="checkbox" id="menuBurger" class="oculto">
 
-    <div id="tapado"></div>
+    <label for="menuBurger" class="menu">
+        <i class="fas fa-bars"></i> </label>
 
-    <nav>
-        <a href="#" id="abrir"></a>
-        <a href="#" id="cerrar"></a>
+    <nav class="menuAbierto">
+        <label for="menuBurger" class="btnCerrado">
+            <i class="fas fa-times"></i> </label>
+        <ul>
+            <li><a href="#">Último lanzamiento</a></li>
+            <li><a href="#biografia">Biografía</a></li>
+            <li><a href="#recorridoMusical">Recorrido musical</a></li>
+        </ul>
     </nav>
 
     <section class="fondo">
         <div >
-            <h1>KENDRICK LAMAR</h1>
+            <h1 class="linea">KENDRICK LAMAR</h1>
         
             <h2>Escuche su último lanzamiento en Spotify</h2>
             <a target="_blank" href="https://open.spotify.com/intl-es/album/0hvT3yIEysuuvkK73vgdcW?si=6AtgW0baQVKJ628stkTQhA" class="boton">REPRODUDIR AHORA - GNX</a> 
@@ -39,21 +44,25 @@
 
         <div class="centrado">
             <h3 id="biografia">BIOGRAFÍA</h3>
-            <p>Kendrick Lamar Duckworth nació el 17 de junio de 1987 en Compton, California, una ciudad marcada por la violencia de pandillas y una fuerte tradición cultural ligada al hip-hop. Hijo de padres originarios de Chicago, creció en un entorno desafiante que influyó profundamente en su perspectiva del mundo.</p>
 
-            <p>Desde joven mostró una sensibilidad aguda hacia su entorno y una pasión por la escritura, el lenguaje y la observación social. Inspirado por figuras como Tupac Shakur y Dr. Dre, comenzó a rapear en su adolescencia y rápidamente ganó atención por su habilidad lírica y madurez inusual.</p>
+            <div class="escala escalaBio">
+                <p>Kendrick Lamar Duckworth nació el 17 de junio de 1987 en Compton, California, una ciudad marcada por la violencia de pandillas y una fuerte tradición cultural ligada al hip-hop. Hijo de padres originarios de Chicago, creció en un entorno desafiante que influyó profundamente en su perspectiva del mundo.</p>
 
-            <p>A pesar de sus orígenes humildes, Kendrick mantuvo siempre una visión clara sobre el tipo de artista que quería ser: uno con mensaje, profundidad y autenticidad. Rechazó las fórmulas comerciales para enfocarse en un arte reflexivo y con propósito, lo que le ha valido respeto tanto dentro como fuera de la industria musical.</p>
+                <p>Desde joven mostró una sensibilidad aguda hacia su entorno y una pasión por la escritura, el lenguaje y la observación social. Inspirado por figuras como Tupac Shakur y Dr. Dre, comenzó a rapear en su adolescencia y rápidamente ganó atención por su habilidad lírica y madurez inusual.</p>
 
-            <p>Reservado en su vida personal, Lamar ha evitado el foco mediático excesivo, manteniéndose fiel a sus raíces y a su comunidad. Su identidad está profundamente conectada a temas como la espiritualidad, la familia, la justicia social y la transformación personal.</p>
+                <p>A pesar de sus orígenes humildes, Kendrick mantuvo siempre una visión clara sobre el tipo de artista que quería ser: uno con mensaje, profundidad y autenticidad. Rechazó las fórmulas comerciales para enfocarse en un arte reflexivo y con propósito, lo que le ha valido respeto tanto dentro como fuera de la industria musical.</p>
 
-            <p>A lo largo de los años, se ha consolidado no solo como un artista destacado, sino también como una voz cultural influyente que trasciende el ámbito musical.</p>
+                <p>Reservado en su vida personal, Lamar ha evitado el foco mediático excesivo, manteniéndose fiel a sus raíces y a su comunidad. Su identidad está profundamente conectada a temas como la espiritualidad, la familia, la justicia social y la transformación personal.</p>
+
+                <p>A lo largo de los años, se ha consolidado no solo como un artista destacado, sino también como una voz cultural influyente que trasciende el ámbito musical.</p>
+            </div>   
+
         </div>
         
         <div class="centrado">
             <h3 id="recorridoMusical">RECORRIDO MUSICAL</h3>
 
-            <div class="album">
+            <div class="album escala escalaRec">
 
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1bkN9nIkkCnXeG4yitVS1J?utm_source=generator&theme=0" width="50%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
@@ -64,7 +73,7 @@
                 </div>
             </div>
 
-             <div class="album">
+             <div class="album escala escalaRec">
 
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0Oq3mWfexhsjUh0aNNBB5u?utm_source=generator" width="50%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
@@ -76,7 +85,7 @@
   
             </div>
 
-            <div class="album">
+            <div class="album escala escalaRec">
 
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7ycBtnsMtyVbbwTfJwRjSP?utm_source=generator" width="50%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
@@ -88,7 +97,7 @@
 
             </div>
 
-            <div class="album">
+            <div class="album escala escalaRec">
 
                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0kL3TYRsSXnu0iJvFO3rud?utm_source=generator&theme=0" width="50%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
@@ -100,7 +109,7 @@
 
             </div>
 
-            <div class="album">
+            <div class="album escala escalaRec">
 
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4eLPsYPBmXABThSJ821sqY?utm_source=generator&theme=0" width="50%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
@@ -112,7 +121,7 @@
 
             </div>
 
-            <div class="album">
+            <div class="album escala escalaRec">
 
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/79ONNoS4M9tfIA1mYLBYVX?utm_source=generator&theme=0" width="50%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
